<resources>
    <string name="app_name">NYAM.AN</string>
    <string name="home">Home</string>
    <string name="profil">Profil</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="pesan">Pesan</string>
    <string name="tampil_resto">Restoran</string>
    <string name="tampil_makanan">Makanan</string>
    <string-array name="data_nama_resto">
        <item>Table Nine Resto</item>
        <item>Red Chili Restaurant</item>
        <item>Posant cafe Resto</item>
        <item>Oemah Daun Cafe dan Resto</item>
        <item>Djago Jowo Purwokerto</item>
        <item>Restoran Taman Pringgading</item>
        <item>Waroenk Ora Umum Purwokerto</item>
        <item>RM Ampera Banyumasan</item>
        <item>Lombok Idjo Purwokerto</item>
        <item>Sambel Layah Purwokerto</item>
    </string-array>
    <string-array name="data_deskripsi_resto">
        <item>"Jl. Profesor DR. HR Bunyamin Purwokerto Utara, Pabuwaran, Pabuaran, Banyumas, Kabupaten Banyumas, Jawa Tengah 53124
Buka :
Senin, 09.00–22.00
Selasa, 09.00–22.00
Rabu, 09.00–22.00
Kamis, 09.00–22.00
Jumat, 09.00–22.00
Sabtu, 09.00–22.00
Minggu, 09.00–22.00
Telepon : +62281627799"</item>
        <item>"Jalan Raya Baturaden No.KM. 6, Karang Blimbing, Pandak, Kec. Baturaden, Kabupaten Banyumas, Jawa Tengah 53124
Buka :
Senin, 09.00–22.00
Selasa, 09.00–22.00
Rabu, 09.00–22.00
Kamis, 09.00–22.00
Jumat, 09.00–22.00
Sabtu, 09.00–22.00
Minggu, 09.00–22.00
Telepon : +622816574573"</item>
        <item>"Purwanegara, Karangjambu, Purwanegara, Kec. Purwokerto Tim., Kabupaten Banyumas, Jawa Tengah 53127
Buka :
Senin, 11.00–22.00
Selasa, 11.00–22.00
Rabu, 11.00–22.00
Kamis, 11.00–22.00
Jumat, 11.00–22.00
Sabtu, 11.00–22.00
Minggu, 11.00–22.00
Telepon : +6281903304254"</item>
        <item>"Jl. KH. Wahid Hasyim No.101 - 103, Windusara, Karangklesem, Kec. Purwokerto Sel., Kabupaten Banyumas, Jawa Tengah 53144
Buka :
Senin, 10.00–20.00
Selasa, 10.00–20.00
Rabu, 10.00–20.00
Kamis, 10.00–20.00
Jumat, 10.00–20.00
Sabtu, 10.00–20.00
Minggu, 10.00–20.00
Telepon : +62281635169"</item>
        <item>"Jl. Gelora Indah I, Mangunjaya, Purwokerto Lor, Kec. Purwokerto Tim., Kabupaten Banyumas, Jawa Tengah 53113
Buka :
Senin, 09.00–21.00
Selasa, 09.00–21.00
Rabu, 09.00–21.00
Kamis, 09.00–21.00
Jumat, 09.00–21.00
Sabtu, 09.00–21.00
Minggu, 09.00–21.00
Telepon : +628112626772"</item>
        <item>"Jl. DI Panjaitan No.217, Karangreja, Purwokerto Kidul, Kec. Purwokerto Sel., Kabupaten Banyumas, Jawa Tengah 53141
Buka :
Senin, 11.00–20.00
Selasa, 11.00–20.00
Rabu, 11.00–20.00
Kamis, 11.00–20.00
Jumat, 11.00–20.00
Sabtu, 07.30–22.00
Minggu, 11.00–20.00
Telepon : +62281636372"</item>
        <item>"Jl. DR. Soeparno No.98, Arcawinangun, Kec. Purwokerto Tim., Kabupaten Banyumas, Jawa Tengah 53113
Buka :
Senin, Buka 24 jam
Selasa, Buka 24 jam
Rabu, Buka 24 jam
Kamis, Buka 24 jam
Jumat, Buka 24 jam
Sabtu, Buka 24 jam
Minggu, Buka 24 jam
Telepon : +628112993333"</item>
        <item>"Jl. Pierre Tendean No.41, Brubahan, Purwanegara, Kec. Purwokerto Utara, Kabupaten Banyumas, Jawa Tengah 53116
Buka :
Senin, 09.00–21.00
Selasa, 09.00–21.00
Rabu, 09.00–21.00
Kamis, 09.00–21.00
Jumat, 09.00–21.00
Sabtu, 09.00–21.00
Minggu, 09.00–21.00
Telepon : +62281642243"</item>
        <item>"Jl. Gelora Indah 2 No.7, Mangunjaya, Purwokerto Lor, Kec. Purwokerto Tim., Kabupaten Banyumas, Jawa Tengah 53114
Buka :
Senin, 10.00–21.30
Selasa, 10.00–21.30
Rabu, 10.00–21.30
Kamis, 10.00–21.30
Jumat, 10.00–21.30
Sabtu, 10.00–21.30
Minggu, 10.00–21.30
Telepon : +622816512946"</item>
        <item>"Jl. DR. Soeparno, Arcawinangun, Kec. Purwokerto Tim., Kabupaten Banyumas, Jawa Tengah 53113
Buka :
Senin, 08.00–21.00
Selasa, 08.00–21.00
Rabu, 08.00–21.00
Kamis, 08.00–21.00
Jumat, 08.00–21.00
Sabtu, 08.00–21.00
Minggu, 08.00–21.00
Telepon : +622811500074"</item>
    </string-array>
    <string-array name="data_foto_resto">
        <item>https://media-cdn.tripadvisor.com/media/photo-s/04/58/88/4b/getlstd-property-photo.jpg</item>
        <item>https://media-cdn.tripadvisor.com/media/photo-s/0d/18/fb/99/p-20160925-204542-largejpg.jpg</item>
        <item>https://lh3.googleusercontent.com/p/AF1QipMNLvVq1Wp6sNDvl0XJwsg61TZwEWLUUjMZtLQx=s1600-w1000</item>
        <item>https://media-cdn.tripadvisor.com/media/photo-s/0c/90/b7/99/photo0jpg.jpg</item>
        <item>https://media-cdn.tripadvisor.com/media/photo-s/0a/67/2a/27/ikon-gamelan-menghiasi.jpg</item>
        <item>https://lh3.googleusercontent.com/arjWns-Karh4fsHy4Us7CUFBm6ZEY7lea6i04MATYJ4qdAg_QIMzqUvE-gdUjgj1aCwg0aQgZQ=w1080-h608-p-no-v0</item>
        <item>https://media-cdn.tripadvisor.com/media/photo-s/11/79/cc/4c/ta-img-20171209-181116.jpg</item>
        <item>https://media-cdn.tripadvisor.com/media/photo-s/0b/95/ab/8a/rumah-makan-ampera-banyumasan.jpg</item>
        <item>https://media-cdn.tripadvisor.com/media/photo-s/0d/0d/bd/91/img-20160922-wa0004-largejpg.jpg</item>
        <item>https://idahceris.files.wordpress.com/2016/01/rm-sambalayah-purwokerto-parkiran.jpg</item>
    </string-array>
    <string-array name="data_lat">
        <item>-7.395186501017864</item>
        <item>-7.38381623453157</item>
        <item>-7.401248362169402</item>
        <item>-7.447149680831831</item>
        <item>-7.41896236476222</item>
        <item>-7.433878973622811</item>
        <item>-7.41548063486622</item>
        <item>-7.424979355761837</item>
        <item>-7.418154894640161</item>
        <item>-7.419467994639256</item>
    </string-array>
    <string-array name="data_lang">
        <item>109.2449006411854</item>
        <item>109.24194386789982</item>
        <item>109.23146512618315</item>
        <item>109.2437026705927</item>
        <item>109.25145999673549</item>
        <item>109.2490429323181</item>
        <item>109.25424113231783</item>
        <item>109.2406285679003</item>
        <item>109.24970716790004</item>
        <item>109.25468029673551</item>
    </string-array>
    <string-array name="data_nama_makanan">
        <item>Nasi Goreng</item>
        <item>Mie Goreng</item>
        <item>Mie Kuah</item>
        <item>Nasi Ayam Goreng</item>
        <item>Nasi Ayam Bakar</item>
        <item>Air Putih</item>
        <item>Tea</item>
        <item>Jus Jeruk</item>
        <item>Jus Alpukat</item>
        <item>Susu</item>
    </string-array>
    <string-array name="data_deskripsi_makanan">
        <item>Nasi goreng adalah sebuah makanan berupa nasi yang digoreng dan diaduk dalam minyak goreng, margarin, atau mentega. Biasanya ditambah kecap manis, bawang merah, bawang putih, asam jawa, lada dan bumbu-bumbu lainnya seperti telur, ayam, dan kerupuk. Ada pula nasi goreng jenis lain yang dibuat bersama ikan asin yang juga populer di seluruh Indonesia. Nasi goreng juga dikenal sebagai masakan nasional Indonesia. Dari sekian banyak hidangan dalam khazanah Masakan Indonesia, hanya sedikit yang dapat dianggap sebagai makanan nasional sejati. Masakan nasional Indonesia ini tidak mengenal batasan kelas sosial. Nasi goreng dapat dinikmati secara sederhana di warung tepi jalan, gerobak penjaja keliling, hingga restoran dan meja prasmanan dalam pesta.</item>
        <item>Mie goreng berarti "mie yang digoreng" adalah makanan yang berasal dari Indonesia yang populer dan juga digemari di Malaysia, dan Singapura. Mie goreng terbuat dari mie kuning yang digoreng dengan sedikit minyak goreng, dan ditambahkan bawang putih, bawang merah, udang serta daging ayam atau daging sapi, irisan bakso, cabai, sayuran, tomat, telur ayam, dan acar. Makanan ini sangat populer dan dapat ditemui di mana-mana di Indonesia, mulai dari pedagang pinggir jalan (kaki lima) sampai restoran mewah. Mie goreng juga dapat ditemukan di warung Malaysia dan Singapura. Versi mie instan dari mie goreng juga sangat populer, seperti Indomie Mie goreng.</item>
        <item>Mie kuah merupakan "mie yang direbus" adalah makanan yang berasal dari Indonesia yang populer dan juga digemari di Malaysia, dan Singapura. Mie kuah terbuat dari mie kuning yang direbus, dan ditambahkan bawang putih, bawang merah, udang serta daging ayam atau daging sapi, irisan bakso, cabai, sayuran, tomat, telur ayam, dan acar. Makanan ini sangat populer dan dapat ditemui di mana-mana di Indonesia, mulai dari pedagang pinggir jalan (kaki lima) sampai restoran mewah. Mie kuah juga dapat ditemukan di warung Malaysia dan Singapura. Versi mie instan dari mie kuah juga sangat populer, seperti Indomie Mie kuah.</item>
        <item>Nasi Putih dengan lauk ayam goreng dengan lalaban dan sambal.  Makanan ini dapat ditemui di mana-mana di Indonesia, mulai dari warung makan  pinggir jalan sampai restoran mewah</item>
        <item>Nasi Putih dengan lauk ayam bakar yang dikecapi dengan lalaban dan sambal. Makanan ini dapat ditemui di mana-mana di Indonesia, mulai dari warung makan  pinggir jalan sampai restoran mewah</item>
        <item>Air mineral adalah air yang mengandung mineral atau bahan-bahan larut lain yang mengubah rasa atau memberi nilai-nilai terapi. Banyak kandungan Garam, sulfur, dan gas-gas yang larut di dalam air ini. Air mineral biasanya masih memiliki buih. Air mineral bersumber dari mata air yang berada di alam.</item>
        <item>Es teh atau Teh es adalah teh yang didinginkan dengan es batu. Es teh sering kali ditambahkan rasa seperti melati, dan buah-buahan seperti limun, ceri, dan arbei, atau susu. Es teh adalah minuman yang sering diminum saat siang hari karena suhu udara yang panas. Di warteg, es teh sering diminum selain air dingin. Teh tarik adalah contoh dari es teh. Selain itu, beberapa merek juga menyediakan es teh, seperti Teh Botol, Frestea, dan Nu Green Tea.</item>
        <item>Jus jeruk adalah jus buah yang diperoleh dengan memeras atau menekan isi buah jeruk. Diminum di banyak tempat di dunia, sari buah jeruk biasanya menjadi bagian makan pagi atau sarapan. Karena adanya vitamin C, jus jeruk dapat melawan beberapa penyakit seperti flu dan pilek, meningkatkan sistem kekebalan tubuh.</item>
        <item>Jus alpukat merupakan salah satu minuman sehat yang cukup populer di berbagai belahan dunia. Jus buah alpukat baik dikonsumsi oleh berbagai kalangan usia, mulai anak-anak, orang dewasa, hingga lanjut usia (lansia). Selain rasanya yang enak dan menyegarkan, jus alpukat memiliki segudang manfaat bagi kesehatan tubuh. Bahkan minuman ini kerap dijadikan salah satu menu diet sehat bagi mereka yang berhasrat menurunkan berat badan. Jus buah alpukat disebut mengandung lemak tak jenuh sehingga aman untuk dikonsumsi secara rutin. Tak hanya lemak baik, minuman yang satu ini juga kaya nutrisi, seperti vitamin A,B,C,E, dan K serta karbohidrat, protein, folat, hingga magnesium.</item>
        <item>susu memiliki banyak fungsi dan manfaat. Untuk umur produktif, susu membantu pertumbuhan mereka. Sementara itu, untuk orang lanjut usia, susu membantu menopang tulang agar tidak keropos. Susu secara alami mengandung nutrisi penting, seperti bermacam-macam vitamin, protein, kalsium, magnesium, fosfor, dan zinc, pendapat lain menambahkan bahwa susu mengandung mineral dan lemak. Oleh karena itu, setiap orang dianjurkan minum susu</item>
    </string-array>
    <string name="menu">Menu</string>
    <string name="harga">Harga</string>
    <string name="keterangan">Keterangan</string>
    <string name="date">Date</string>
    <string name="submit">Submit</string>
    <string name="dark_theme">Tema Gelap</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
</resources>